--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,16 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/reload"
-        android:title="@string/reload"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_reload_icon" />
-    <item
-        android:id="@+id/settings"
-        android:title="@string/settings"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_settings_icon" />
-    <item
         android:id="@+id/only_show_entries"
         android:title="@string/only_show_entries"
         app:showAsAction="ifRoom"
@@ -40,4 +30,21 @@
         </menu>
 
     </item>
+
+    <item
+        android:id="@+id/sort_order"
+        android:title="@string/sorting_order"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_reorder_icon" />
+
+    <item
+        android:id="@+id/reload"
+        android:title="@string/reload"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_reload_icon" />
+    <item
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_settings_icon" />
 </menu>
